Added xoauth authentication to imap2maildir

--- a/example.conf
+++ b/example.conf
@@ -31,3 +31,8 @@
 # Maximum number of messages to get in one run (defaults: no limit)
 #maxmessages: 1000
 
+# Two-legged OAuth consumer key
+oauth_consumer_key = example.com
+
+# Two-legged OAuth consumer secret
+oauth_consumer_secret = gibberish_here
